--- a/source/analysis-4.html.erb
+++ b/source/analysis-4.html.erb
@@ -5,9 +5,9 @@
     <div class="row">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
-          <li>Categorizarion</li>
-          <li>Connection PBSOL</li>
+          <li><%= link_to("Sélection", "analysis.html" , class:"color-grey") %></li>
+          <li><%= link_to("Categorizarion", "analysis-2.html" , class:"color-grey") %></li>
+          <li><%= link_to("Connection PBSOL", "analysis-3.html" , class:"color-grey") %></li>
           <li class="active">Contradictions</li>
           <li class="next">Business Drivers</li>
           <li class="next">Evaluation criteria</li>
@@ -23,50 +23,60 @@
 </div>
 
 <div class="container">
-  
+
 
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2 mb+ pb+">
 
       <div class="clearfix mb">
         <div class="pull-left"><h1>12 contradictions</h1></div>
-        <div class="pull-right"><a href="#" class="btn btn-outline-grey">Edit</a></div>
+        <div class="pull-right"><a href="#" class="btn btn-outline-grey js-edit-contradictions">Edit</a><a href="#" class="btn btn-outline-grey js-new-contradiction ml">Add a contradiction</a></div>
       </div>
 
-      <% for i in 1..3 do %>
+      <div class="cards">
+
+
+      <% letters = ["A", "B", "C", "D", "E", "F"] %>
+      <% for i in letters do %>
 
       <div class="card animated mb">
 
         <div class="card__handles">
           <i class="ionicons ion-ios-arrow-up color-white js-move-up"></i>
           <i class="ionicons ion-ios-arrow-down color-white js-move-down"></i>
+          <i class="ionicons ion-android-close color-white hidden js-remove-contradiction"></i>
         </div>
+
+
 
         <div class="contradictions p+">
 
-            <p class="h1 pull-left">TC<%= i %></p>
+            <div class="contradictions__count animated"><%= i %></div>
+
+
+            <h1 class="pull-left"><span class="js-hide-edit">TC <%= i %></span><input type="text" class="form-control-2 hidden js-show-edit"></h1>
 
             <table class="table table-bordered bg-white mb0 contradictions__tb-header">
               <tr>
                 <th colspan="2"><div class="text-center">Action parameter</div></th>
               </tr>
               <tr>
-                <th><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
-                <th><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
+                <th width="49.9%"><div class="text-uppercase text-center color-grey-light">Strenght</div></th>
+                <th width="50%"><div class="text-uppercase text-center color-grey-light">Weakness</div></th>
               </tr>
             </table>
 
             <table class="table table-bordered bg-white">
               <tbody>
                 <tr>
-                  <td valign="center" style="width: 50%;">Lorem ipsum</td>
+                  <td valign="center" style="width: 50%;"><span class="js-hide-edit">Lorem ipsum</span><input type="text" class="form-control-2 hidden js-show-edit"></td>
                   <td class="text-center">
                     <i class="fa fa-2 fa-smile-o color-green"></i>
                   </td>
                   <td class="text-center"><i class="fa fa-2 fa-frown-o color-pink"></i></td>
                 </tr>
                 <tr>
-                  <td style="width: 50%;">Lorem ipsum</td>
+                  <td style="width: 50%;"><span class="js-hide-edit">Lorem ipsum</span><input type="text" class="form-control-2 hidden js-show-edit"></td>
                   <td class="text-center">
                     <i class="fa fa-2 fa-frown-o color-pink"></i>
                   </td>
@@ -74,32 +84,42 @@
                     <i class="fa fa-2 fa-smile-o color-green"></i>
                   </td>
                 </tr>
+                <tr class="hidden js-show-edit">
+                  <td valign="center" colspan="3"><a href="#" class="btn btn-outline-grey js-add-row">Add</a></td>
+                </tr>
               </tbody>
             </table>
         </div>
         <div class="bg-grey-light pl+ pr+ pt pb">
-          
+
           <div class="clearfix">
             <span class="label label-default mr- mb- pull-left">
               <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
               <span class="label__text">Store enery in spring</span>
+              <i class="label__close ionicons ion-android-close hidden js-show-edit"></i>
             </span>
-            
+
             <span class="label label-default mr- mb- pull-left">
               <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
               <span class="label__text">Claw linked linked</span>
+              <i class="label__close ionicons ion-android-close hidden js-show-edit"></i>
             </span>
-            
+
             <span class="label label-default mr- mb- pull-left">
               <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
               <span class="label__text">Rolling contact</span>
+              <i class="label__close ionicons ion-android-close hidden js-show-edit"></i>
             </span>
           </div>
-          
+
           <p class="mt"><strong>Lorem ipsum dolor</strong> sit amet, <strong>consectetur adipiscing elit</strong>. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. <strong>Proin sodales pulvinar tempor</strong>.</p>
+
+          <textarea  class="form-control-2 hidden js-show-edit" rows="100" style="height: 100px"></textarea>
+
         </div>
       </div>
       <% end %>
+      </div>
     </div>
 </div>
 
@@ -111,23 +131,144 @@
 
 <%= partial "partials/javascripts" %>
 
-<script> 
-  $(".js-move-down").click(function(){
+<script>
+
+  // var listItem = $(".card");
+  // $(".contradictions__count").html($(".cards").index(listItem));
+
+  // $( ".card" ).click(function() {
+  //   // `this` is the DOM element that was clicked
+  // });
+
+  $(document).ready(function(){
+    $(".card").each(function(){
+      var index = $(this).index();
+      $(this).find( ".contradictions__count" ).text(index+1);  
+    })
+    
+  });
+
+  $(document).on('click', '.js-move-down', function(){
+
     var card = $(this).parent().parent();
     var nextCard = card.next(".card");
+
+    var index = card.index();
+    card.find( ".contradictions__count" ).text(index+2);
+    nextCard.find( ".contradictions__count" ).text(index+1);
+
     if (nextCard.length) {
       nextCard.removeClass("slideInUp slideInDown wobble").addClass("slideInUp");
       card.removeClass("slideInUp slideInDown wobble").addClass("slideInDown").insertAfter(nextCard);
     }
+
   });
-  $(".js-move-up").click(function(){
+
+  
+  $(document).on('click', '.js-move-up', function(){
+
     var card = $(this).parent().parent();
     var prevCard = card.prev(".card");
+
+    var index = card.index();
+    card.find( ".contradictions__count" ).text(index);
+    prevCard.find( ".contradictions__count" ).text(index+1);
+
     if (prevCard.length) {
       prevCard.removeClass("slideInUp slideInDown wobble").addClass("slideInDown");
       card.removeClass("slideInUp slideInDown wobble").addClass("slideInUp").insertBefore(prevCard);
     }
   });
 
+
+  $(".js-edit-contradictions").click(function(e){
+    e.preventDefault();
+    $(this).toggleText('Done', 'Edit');
+    $(".js-remove-contradiction").toggleClass("hidden");
+    $(".js-hide-edit").toggleClass("hidden");
+    $(".js-show-edit").toggleClass("hidden");
+  });
+
+
+
+  $(".js-new-contradiction").click(function(e){
+    e.preventDefault();
+    var newContradiction = $(
+      "<div class='card animated mb'>"+
+
+        "<div class='card__handles'>"+
+          "<i class='ionicons ion-ios-arrow-up color-white js-move-up'></i>"+
+          "<i class='ionicons ion-ios-arrow-down color-white js-move-down'></i>"+
+          "<i class='ionicons ion-android-close color-white js-remove-contradiction'></i>"+
+        "</div>"+
+        "<div class='contradictions p+'>"+
+            "<h1 class='pull-left'><input type='text' class='form-control-2'></h1>"+
+            "<table class='table table-bordered bg-white mb0 contradictions__tb-header'>"+
+              "<tr>"+
+                "<th colspan='2'><div class='text-center'>Action parameter</div></th>"+
+              "</tr>"+
+              "<tr>"+
+                "<th width='49.9%'><div class='text-uppercase text-center color-grey-light'>Strenght</div></th>"+
+                "<th width='50%'><div class='text-uppercase text-center color-grey-light'>Weakness</div></th>"+
+              "</tr>"+
+            "</table>"+
+
+            "<table class='table table-bordered bg-white'>"+
+              "<tbody>"+
+                "<tr>"+
+                  "<td valign='center' style='width: 50%;'><input type='text' class='form-control-2'></td>"+
+                  "<td class='text-center'>"+
+                    "<i class='fa fa-2 fa-smile-o color-green'></i>"+
+                  "</td>"+
+                  "<td class='text-center'><i class='fa fa-2 fa-frown-o color-pink'></i></td>"+
+                "</tr>"+
+                "<tr>"+
+                  "<td valign='center' colspan='3'><a href='#' class='btn btn-outline-grey js-add-row'>Add</a></td>"+
+                "</tr>"+
+              "</tbody>"+
+            "</table>"+
+        "</div>"+
+        "<div class='bg-grey-light pl+ pr+ pt pb'>"+
+          "<div class='clearfix'><input type='text' class='form-control-2 mb' placeholder='tags'></div>"+
+          "<textarea  class='form-control-2' rows='100' style='height: 100px'></textarea>"+
+          "<a href='#' class='btn bg-blue color-white mt'>Add constradiction</a>"+
+        "</div>"+
+      "</div>");
+
+      $(".cards").prepend(newContradiction);
+
+    });
+
+
+
+    
+    $(document).on('click', '.js-remove-contradiction', function(){
+
+      var $that = $(this);
+
+      $that.parent().parent().addClass("animated zoomOut");
+
+      setTimeout(function(){
+        $that.parent().parent().remove();
+      }, 500);
+
+  });
+
+
+  $(".js-add-row").click(function(e){
+    e.preventDefault();
+    var newRow = $(
+      "<tr>"+
+        "<td valign='center' style='width: 50%;'><input type='text' class='form-control-2'></td>"+
+          "<td class='text-center'>"+
+            "<i class='fa fa-2 fa-smile-o color-green'></i>"+
+          "</td>"+
+          "<td class='text-center'><i class='fa fa-2 fa-frown-o color-pink'></i></td>"+
+      "</tr>");
+    $(this).parent().parent().before(newRow);
+  });
+    
   
+
+
 </script>
