--- a/source/analysis-8.html.erb
+++ b/source/analysis-8.html.erb
@@ -4,12 +4,12 @@
     <div class="row no-gutter">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
-          <li>Categorizarion</li>
-          <li>Extraction</li>
-          <li>Contradictions</li>
-          <li>Business Drivers</li>
-          <li>Evaluation criteria</li>
+          <li><%= link_to("Sélection", "analysis.html" , class:"color-grey") %></li>
+          <li><%= link_to("Categorizarion", "analysis-2.html" , class:"color-grey") %></li>
+          <li><%= link_to("Connection PBSOL", "analysis-3.html" , class:"color-grey") %></li>
+          <li><%= link_to("Contradictions", "analysis-4.html" , class:"color-grey") %></li>
+          <li><%= link_to("Business Drivers", "analysis-5.html" , class:"color-grey") %></li>
+          <li><%= link_to("Evaluation criteria", "analysis-6.html" , class:"color-grey") %></li>
           <li class="active">Evaluation</li>
         </ul>
         <p class="text-left text-italic color-grey text-light mt-">Evaluate each stakeholders technologies by the defined evaluation criteria</p>
