--- a/source/analysis-2.html.erb
+++ b/source/analysis-2.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
+          <li><%= link_to("Sélection", "analysis.html" , class:"color-grey") %></li>
           <li class="active">Categorizarion</li>
           <li class="next">Connection PBSOL</li>
           <li class="next">Contradictions</li>
@@ -33,20 +33,20 @@
             <i class="fa fa-file-text-o color-grey fa-2"></i>
           </div>
           <div class="pl pr">
-            
+
             <h3 class="text-bold h4 mb color-blue-dark">Positive retraction latch locking dog for a rotating control …</h3>
 
             <div class="drop-area p clearfix" id="drop-area-<%= i%>">
               <% for i in 0..2 do %>
-                <span class="label label-default pull-left mr- mb- df at-c">
+                <span class="label label-default pull-left mr- mb- df at-c" data-title="LER Pawl on excentric + 2nd pawl">
                   <i class="ionicons ion-pricetag color-grey-light mr- font-14 pull-left"></i>
                   <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
                   <i class="label__close ionicons ion-android-close js-remove-label"></i>
                 </span>
               <% end %>
             </div>
-            
-            
+
+
           </div>
         </div>
       <% end %>
@@ -56,31 +56,31 @@
     <div class="col-sm-4 df pl0">
       <div class="bg-dark-blue-2 p">
         <div class="clearfix mb">
-          <p class="h1 color-white mb+">Suggested categories</p>
-          <a href="#" class="btn btn-outline color-white">Edit</a>
+          <p class="h1 color-white mb+">Suggested technologies</p>
+          <a href="#" class="btn btn-outline color-white js-edit-technologies">Edit</a>
         </div>
 
           <div id="suggested-categories">
           <% for i in 0..6 do %>
-              
-                <span class="label label-default">
+
+                <span class="label label-default" data-title="LER Pawl on excentric + 2nd pawl">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">LER Pawl on excentric + 2nd pawl</span>
-                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-all-labels"></i>
                   <div class="label__number"><%= Random.rand(30) %></div>
                 </span>
 
-                <span class="label label-default">
+                <span class="label label-default" data-title="Store enery in spring">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">Store enery in spring</span>
-                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-all-labels"></i>
                   <div class="label__number"><%= Random.rand(30) %></div>
                 </span>
 
-                <span class="label label-default">
+                <span class="label label-default" data-title="2nd pawl">
                   <i class="ionicons ion-pricetag color-blue-3 mr- font-14 pull-left"></i>
                   <span class="label__text">2nd pawl</span>
-                  <i class="label__close ionicons ion-android-close hidden js-remove-label"></i>
+                  <i class="label__close ionicons ion-android-close hidden js-remove-all-labels"></i>
                   <div class="label__number "><%= Random.rand(30) %></div>
                 </span>
 
@@ -98,15 +98,15 @@
 <%= partial "partials/javascripts" %>
 
 <script>
-  var sortable = $('sortable');
+  var sortable = document.getElementById('sortable');
 
 
-  dragula([$('drop-area-0'), $('drop-area-1'), $('drop-area-2'), $('drop-area-3'), $('drop-area-4'), $('drop-area-4'), $('suggested-categories')], {
+  dragula([document.getElementById('drop-area-0'), document.getElementById('drop-area-1'), document.getElementById('drop-area-2'), document.getElementById('drop-area-3'), document.getElementById('drop-area-4'), document.getElementById('drop-area-4'), document.getElementById('suggested-categories')], {
     copy: function (el, source) {
-        return source === $('suggested-categories')
+        return source === document.getElementById('suggested-categories')
       },
       accepts: function (el, target) {
-        return target !== $('suggested-categories')
+        return target !== document.getElementById('suggested-categories')
       }
   }).on('drag', function (el) {
     el.className = el.className.replace('ex-moved', '');
@@ -120,7 +120,7 @@
 
 
 
-  function clickHandler (e) {
+  function clickHandler(e) {
     var target = e.target;
     if (target === sortable) {
       return;
@@ -132,11 +132,42 @@
     }, 500);
   }
 
-  function $ (id) {
-    return document.getElementById(id);
-  }
+  $(document).on('click', '.js-remove-label', function(){
 
-  $(".js-remove-label").click(function(){
-          $(this).parent().hide();
+      var $that = $(this);
+
+      $that.parent().addClass("animated zoomOut");
+
+      setTimeout(function(){
+        $that.parent().hide();
+      }, 500);
+
   });
+
+  $(document).on('click', '.js-remove-all-labels', function(){
+
+      var $that = $(this),
+      dataTitle = $that.parent().data("title"),
+      allLabels = $('.label[data-title="'+dataTitle+'"]');
+
+      allLabels.addClass("animated zoomOut");
+
+      setTimeout(function(){
+        allLabels.hide();
+      }, 500);
+
+  });
+
+
+  $(".js-edit-technologies").click(function(e){
+
+    e.preventDefault();
+    $(this).toggleText('Done', 'Edit');
+    $(".label__close").toggleClass("hidden");
+    
+  });
+
+
+
+
 </script>
