--- a/source/analysis-5.html.erb
+++ b/source/analysis-5.html.erb
@@ -4,10 +4,10 @@
     <div class="row no-gutter">
       <div class="col-sm-9">
         <ul class="breadcrumbs">
-          <li>Sélection</li>
-          <li>Categorizarion</li>
-          <li>Extraction</li>
-          <li>Contradictions</li>
+          <li><%= link_to("Sélection", "analysis.html" , class:"color-grey") %></li>
+          <li><%= link_to("Categorizarion", "analysis-2.html" , class:"color-grey") %></li>
+          <li><%= link_to("Connection PBSOL", "analysis-3.html" , class:"color-grey") %></li>
+          <li><%= link_to("Contradictions", "analysis-4.html" , class:"color-grey") %></li>
           <li class="active">Business Drivers</li>
           <li class="next">Evaluation criteria</li>
           <li class="next">Evaluation</li>
@@ -21,95 +21,97 @@
 </div>
 
 
-<div class="container">
+<div class="container mb+ pb+">
   <div class="row no-gutter">
     <div class="col-sm-8">
 
       <div class="card card--separator p pt+">
-
+        
         <div class="clearfix">
           <h1 class="pull-left text-bold">
             12 business drivers
           </h1>
           <div class="pull-right">
-            <a href="#" class="btn btn-default color-blue">Edit</a>
+            <a href="#" class="btn btn-default color-blue js-edit-drivers">Edit</a>
           </div>
         </div>
       </div>
 
       <div class="card card--separator p">
-        <a href="#" class="btn btn--plus">Add a business driver</a>
+        <a href="#" class="btn btn--plus js-add-driver">Add a business driver</a>
       </div>
-        
-        
-      <div class="card card--separator p">
 
+
+      <div class="card card--separator p">
+          <i class='card__delete ionicons ion-android-close white js-remove-driver pull-left mr hidden'></i>
           <div class="clearfix">
             <div class="pull-left">Operating effort</div>
-            
+
             <div class="pull-right">
               <input class="slider" data-slider-id='slider-green' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
-        
+
       </div>
 
 
       <div class="card card--separator p">
-
+          <i class='card__delete ionicons ion-android-close white js-remove-driver pull-left mr hidden'></i>
           <div class="clearfix">
             <div class="pull-left">Noise</div>
-            
+
             <div class="pull-right">
               <input class="slider" data-slider-id='slider-orange' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
-        
+
       </div>
 
       <div class="card card--separator p">
-
+          <i class='card__delete ionicons ion-android-close white js-remove-driver pull-left mr hidden'></i>
           <div class="clearfix">
             <div class="pull-left">Product cost</div>
-            
+
             <div class="pull-right">
               <input class="slider" data-slider-id='slider-purple' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
-        
+
       </div>
 
       <div class="card card--separator p">
+          <i class='card__delete ionicons ion-android-close white js-remove-driver pull-left mr hidden'></i>
 
           <div class="clearfix">
             <div class="pull-left">Fail safe</div>
-            
+
             <div class="pull-right">
               <input class="slider" data-slider-id='slider-turquoise' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
-        
+
       </div>
 
       <div class="card card--separator p">
+          <i class='card__delete ionicons ion-android-close white js-remove-driver pull-left mr hidden'></i>
 
           <div class="clearfix">
             <div class="pull-left">Space Roominess</div>
-            
+
             <div class="pull-right">
               <input class="slider" data-slider-id='slider-blue' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
             </div>
           </div>
-        
+
       </div>
-      
+
 
     </div>
     <div class="col-sm-4">
       <div class="bg-dark-blue-2 p pt+">
 
         <p class="h1 color-white mb+">Your distribution</p>
-          
+
           <canvas id="myChart" width="400" height="400"></canvas>
 
         <div class="color-white mt">
@@ -134,7 +136,7 @@
               </li>
             </ul>
         </div>
-          
+
       </div>
     </div>
   </div>
@@ -146,14 +148,72 @@
 
 
 <%= partial "partials/javascripts" %>
-    
+
 <script>
 
-$('.slider').slider({
+
+
+$('.slider').bootstrapSlider({
     formatter: function(value) {
       return 'Current value: ' + value;
     }
   });
+
+
+var newDriver = $(
+  "<div class='card card--separator p'>"+
+      "<div class='clearfix'>"+
+      "<i class='ionicons ion-android-close white js-remove-driver pull-left mt'></i>" +
+        "<div class='pull-left ml+'><input type='text' class='form-control' autofocus/></div>"+
+
+        "<div class='pull-right'>"+
+          "<a href='#' class='btn btn-default'>Add driver</a>"+
+        "</div>"+
+      "</div>"+
+
+  "</div>");
+
+$(".js-edit-drivers").click(function(e){
+
+    e.preventDefault();
+    $(this).toggleText('Done', 'Edit');
+    $(".card__delete").toggleClass("hidden");
+    newDriver.remove();
+});
+
+
+
+$(document).on('click', '.js-remove-driver', function(){
+
+    var $that = $(this);
+
+    $that.parent().addClass("animated zoomOut");
+
+    setTimeout(function(){
+      $that.parent().hide();
+    }, 500);
+
+});
+
+   
+
+$(".js-add-driver").click(function(e){
+    e.preventDefault();
+    var newDriver = $(
+    "<div class='card card--separator p'>"+
+        "<i class='ionicons ion-android-close white js-remove-driver pull-left mt'></i>" +
+        "<div class='clearfix'>"+
+          "<div class='pull-left ml+'><input type='text' class='form-control' autofocus/></div>"+
+          "<div class='pull-right'>"+
+            "<a href='#' class='btn btn-default'>Add driver</a>"+
+          "</div>"+
+        "</div>"+
+    "</div>");
+
+    $(this).parent().after(newDriver);
+  });
+
+
   var ctx = document.getElementById("myChart");
   var myChart = new Chart(ctx, {
       type: 'doughnut',
@@ -249,5 +309,8 @@ $('.slider').slider({
       }
   });
 
-  
+
+
+
+
 </script>
