--- a/source/stylesheets/components/_contradictions.scss
+++ b/source/stylesheets/components/_contradictions.scss
@@ -1,10 +1,22 @@
 .contradictions {
 	position: relative;
 	padding-top: 92px !important;
+	h1 {
+		margin-top: -10px;
+		margin-bottom: 10px;
+	}
 	&__tb-header {
 		position: absolute;
 		top: 40px;
 		right: 40px;
 		width: 336px;
 	}
+  &__count {
+    position: absolute;
+    right: -30px;
+    top: 10px;
+    background: $grey-light;
+    padding: 10px;
+    box-shadow: 0 0 3px rgba(0,0,0,.2);
+  }
 }
