--- a/source/stylesheets/components/_mini-card.scss
+++ b/source/stylesheets/components/_mini-card.scss
@@ -14,6 +14,10 @@
 			color: #fff;
 			border: solid 1px $pink;
 		}
+		.mini-card__delete {
+			left: -21px;
+			background: $pink;
+		}
 	}
 	&--green {
 		border: solid 1px #a1E3DF;
@@ -27,14 +31,32 @@
 			color: #fff;
 			border: solid 1px $green;
 		}
+		.mini-card__delete {
+			right: -21px;
+			background: $green;
+		}
 	}
 	
 	&__content {
 		@extend .clearfix;
 		display: flex;
+		flex-grow: 1;
 		align-items: center;
 	}
-
+	&__delete {
+		position: absolute;
+		color: #fff;
+		display: block;
+		top: 50%;
+		width: 36px;
+		height: 36px;
+		line-height: 23px;
+		text-align: center;
+		border-radius: 50%;
+		padding: 8px;
+		margin-top: -18px;
+		cursor: pointer;
+	}
 	&__anchor {
 		position: absolute;
 		color: #fff;
@@ -69,6 +91,10 @@
 			border-radius: 50%;
 			box-shadow: 0 0 5px 0 rgba(0,0,0,0.35);
 		}
+	}
+	textarea {
+		height: 90px;
+		width: 350px;
 	}
 }
 
