--- a/source/stylesheets/components/_patent.scss
+++ b/source/stylesheets/components/_patent.scss
@@ -4,6 +4,7 @@
 	@extend .pr;
 	@extend .df;
 	@extend .at-c;
+	justify-content: space-between;
 	color:white;
 	border-left: solid 2px $green;
 	margin-bottom: 1px;
