--- a/source/stylesheets/pages/_sun-diagram.scss
+++ b/source/stylesheets/pages/_sun-diagram.scss
@@ -4,7 +4,9 @@
 		height: 100vh;
 		width: 100%;
 		background: #17212A;
-
+    img {
+      transform-origin: 100px 300px;
+    }
 	}
 	&__zoom-in {
 		display: inline-block;
