--- a/source/transition-1.html.erb
+++ b/source/transition-1.html.erb
@@ -1,7 +1,7 @@
   <div class="container mt">
     <div class="row">
       <div class="col-sm-9">
-        
+
       </div>
       <div class="col-sm-3">
           <%= partial "partials/progress", :locals => { :percentage => "10", :step_name => "Patent analysis" } %>
@@ -20,8 +20,19 @@
 <%= partial "partials/javascripts" %>
 
 <script>
-$(".js-btn-loading").html("Please wait...").addClass("btn-outline color-white").removeClass("bg-white color-blue-2");
+  $(".js-btn-loading").html("Please wait...").addClass("btn-outline color-white").removeClass("bg-white color-blue-2");
+
+
+  // simulation:
+
   setTimeout(function(){
     $(".js-btn-loading").html("Continue").addClass("bg-white color-blue-2").removeClass("btn-outline color-white");
   }, 3000);
+
+
+  setTimeout(function(){
+    var url = $(".js-btn-loading").attr('href');
+    window.location.href = url;
+  }, 3500);
+
 </script>
