--- a/source/transition-5.html.erb
+++ b/source/transition-5.html.erb
@@ -20,7 +20,7 @@
 <div class="padded"><%= partial "partials/loading" %></div>
 
 
-<%= partial "partials/action-bar", :locals => { :text => "Saving...",:text2 => "Par Denis C. - INSA", :link => "analysis-6.html", :link_back => "analysis-5.html" } %>
+<%= partial "partials/action-bar", :locals => { :text => "Saving...",:text2 => "Par Denis C. - INSA", :link => "analysis-5.html", :link_back => "analysis-4.html" } %>
 
 <%= partial "partials/javascripts" %>
 
@@ -29,4 +29,9 @@ $(".js-btn-loading").html("Please wait...").addClass("btn-outline color-white").
   setTimeout(function(){
     $(".js-btn-loading").html("Continue").addClass("bg-white color-blue-2").removeClass("btn-outline color-white");
   }, 3000);
+
+  setTimeout(function(){
+    var url = $(".js-btn-loading").attr('href');
+    window.location.href = url;
+  }, 3500);
 </script>
